force-app/main/default/objects/LLC_BI__DocuSign_Template__c/LLC_BI__DocuSign_Template__c.object-meta.xml
<CustomObject>
    <label>DocuSign Template</label>
    <nameField>
        <label>DocuSign Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>