force-app/main/default/objects/LLC_BI__DocuSign_Template__c/fields/LLC_BI__Doc_Man__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Doc_Man__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required and is manually populated. It identifies the Document Manager associated with DocuSign Template.</description>
    <label>Document Manager</label>
    <referenceTo>LLC_BI__DocManager__c</referenceTo>
    <relationshipLabel>DocuSign Templates</relationshipLabel>
    <relationshipName>DocuSign_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>