force-app/main/default/objects/LLC_BI__DocuSign_Template__c/fields/LLC_BI__Doc_Man_Class__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Doc_Man_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is required and is manually populated. It identifies the Document Manager Class associated with DocuSign Template.</description>
    <label>Document Manager Class</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LLC_BI__DocClass__c.LLC_BI__DocType__c</field>
            <operation>equals</operation>
            <valueField>$Source.LLC_BI__Doc_Man_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>LLC_BI__DocClass__c</referenceTo>
    <relationshipLabel>DocuSign Templates</relationshipLabel>
    <relationshipName>DocuSign_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>