force-app/main/default/objects/LLC_BI__DocuSign_Template__c/fields/LLC_BI__Filter__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Filter__c</fullName>
    <label>-D Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>