force-app/main/default/objects/LLC_BI__DocuSign_Template__c/fields/LLC_BI__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Object_Type__c</fullName>
    <description>The fully qualified name of the object associated with the template (For example &apos;LLC_BI_Loan__c&apos; or &apos;Account&apos;)</description>
    <label>Object Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>