force-app/main/default/objects/LLC_BI__DocuSign_Template__c/fields/LLC_BI__Relationship__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relationship__c</fullName>
    <description>Define the relationship that should be used when the document is focused on a related entity.

For example if the template is associated with the Account object and the document content focus on a specific Contact that is associated with the Account the field should be set to &apos;Contacts&apos;. This will result in the user being presented with an option to select the Contact when generating the document from the template.

Examples on the Account object:
- Contacts
- Contacts.Owner

Examples on the Loan object:
- LLC_BI__Legal_Entities__r.LLC_BI__Account__r</description>
    <label>Relationship</label>
    <length>200</length>
    <type>Text</type>
</CustomField>