force-app/main/default/objects/LLC_BI__DocuSign_Template__c/fields/LLC_BI__Template_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Template_Id__c</fullName>
    <description>The template ID assigned by DocuSign.

For example: 40DD7F3F-8662-4EF9-AE97-AE75959408A8</description>
    <label>Template Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>