force-app/main/default/objects/LLC_BI__DocuSign_Template__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Object_Type__c</columns>
    <columns>LLC_BI__Relationship__c</columns>
    <columns>LLC_BI__Filter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>